# oci_agentmemory_demo

./: .env.example  .gitignore  README.md  SECURITY.md  bash.sh  pyproject.toml  streamlit_app.py
app/: config.py  main.py
app/static/: styles.css
app/templates/: base.html  home.html
design-documents/: README.md  architecture-design.md  feature-walkthrough.html  memory-retrieval-flow.md  ui-flow-design.md  video-narration-script.md
design-documents/video/: generate_walkthrough_gif.py
features/agent_memory/: README.md  __init__.py  router.py  service.py
features/agent_memory/infra/terraform/: .terraform.lock.hcl  app.tf  bootstrap.tf  database.tf  genai_api_key.tf  genai_project.tf  network.tf  policies.tf  terraform.tfvars.example  versions.tf
features/agent_memory/scripts/: create_genai_api_key.sh  create_genai_project.sh
features/agent_memory/templates/agent_memory/: architecture.html  demo.html  infra.html
tests/: test_agent_memory_deletion.py
