[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-agent-demo"
version = "0.1.0"
description = "Multi-page Streamlit starter for enterprise AI demos on OCI"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.115,<1.0",
  "imageio>=2.37,<3.0",
  "imageio-ffmpeg>=0.6,<1.0",
  "jinja2==3.1.6",
  "langgraph>=1.1,<2.0",
  "moviepy>=2.2,<3.0",
  "openai>=2.24,<3.0",
  "oracleagentmemory==26.4.0",
  "oracledb>=3.4.2,<4.0",
  "pillow>=11.3,<12.0",
  "python-multipart>=0.0.9,<1.0",
  "streamlit>=1.45,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
  "wayflowcore>=26.1.1,<27.0",
]

[tool.setuptools]
py-modules = ["streamlit_app"]

[tool.setuptools.packages.find]
include = ["app*", "features*"]
